tests/algorithms/x/Clojure/strings/knuth_morris_pratt.out
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/algorithms/x/Clojure/strings/knuth_morris_pratt.clj:37:729).
Can only recur from tail position

Full report at:
/tmp/clojure-14551521246342944240.edn